# wordshk_macos

./: .gitignore  README.md  create_installer.sh  logo.ai  logo_wide.ai  pubspec.yaml
lib/: main.dart  make_dict.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
media/: logo_wide.ai
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs
test/: widget_test.dart
