[package]
name = "wordshk_tools"
version = "0.1.0"
edition = "2018"

[dependencies]
lip = "5.1.1"
csv = "1.1"
lazy_static = "1.4.0"
indoc = "1.0"
anyhow = { version = "1.0.44", features = ["backtrace"] }
flutter_rust_bridge = "1.6.0"
reqwest = {version = "0.10.9", default-features = false, features = ["rustls-tls"]}
futures = "0.3.18"
bytes = "1.1.0"
flate2 = "1.0.22"
tokio-compat-02 = "0.2"
tar = "0.4.37"

[lib]
crate-type = ["cdylib"]
